--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,11 @@ repositories {
 
 def aspectjWeaverVersion = "1.9.22",
     selenideVersion = "6.13.0",
-    restAssuredVersion = "5.5.0",
-    allureVersion = "2.29.0",
-    junitVersion = "5.11.3",
-    slf4jVersion = "2.0.16"
+    restAssuredVersion = "5.3.0",
+    allureVersion = "2.21.0",
+    junitVersion = "5.9.3",
+    slf4jVersion = "2.0.7",
+    ownerVersion = "1.0.4"
 
 allure {
     report {
@@ -36,12 +37,14 @@ dependencies {
             "io.appium:java-client:8.3.0",
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion"
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.aeonbits.owner:owner:$ownerVersion"
     )
 }
 
 tasks.withType(Test) {
-    useJUnitPlatform()
+    systemProperties += System.properties
+    systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
 
     testLogging {
         lifecycle {
@@ -49,4 +52,22 @@ tasks.withType(Test) {
             exceptionFormat "short"
         }
     }
+}
+
+test {
+    useJUnitPlatform()
+}
+
+task android(type: Test) {
+    useJUnitPlatform {
+        includeTags 'android'
+    }
+    systemProperty 'platform', 'android'
+}
+
+task ios(type: Test) {
+    useJUnitPlatform {
+        includeTags 'ios'
+    }
+    systemProperty 'platform', 'ios'
 }
