--- a/src/test/resources/properties/credentials.properties
+++ b/src/test/resources/properties/credentials.properties
@@ -1,2 +1,2 @@
-browserstack.user=annkorn_zjcKTd
-browserstack.key=vxJMxK1fsLbwXNLj1PQ8
+browserstack.user=confidential_data
+browserstack.key=confidential_data
